# microsistemas

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .htaccess  .markdownlint.json  .markdownlintignore  .php-cs-fixer.dist.php  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  GITHUB_RELEASE_GUIDE.md  INSTALL_v1.1.0.md  Makefile  NOTICE  OPERATING-MODES.md  README.md  RELEASE.md  RELEASE_NOTES_v1.1.0.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  SUPPORT.md  cases.json  commit_msg.txt  commit_msg_fix.txt  composer.json  conversor.php  doc.php  docker-compose.yml  gitcommand-app.js  herramientas_javascript.html  hj.css  hj.js  hub.ps1  (+8 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  (+3 more)
docker/: init-db.sh
docs/: API.md  ARCHITECTURE.md  AWS_MIGRATION.md  BEGINNERS_GUIDE.md  FILES_REFERENCE.md  HUB.md  INSTALL.md  LANDING_PAGE.md  MAINTAINERS.md  RECRUITER.md  REQUIREMENTS.md  SECURITY.md  SYSTEMS_CATALOG.md  TECHNICAL_SPECS.md  USER_MANUAL.md
hub/: main.py
landing/: index.html
mcp/: README.md  config.py  pyproject.toml  server.py
mcp/prompts/: auditar_manifest.md  diagnosticar_entorno.md  integrar_microapp.md  preparar_release_docs.md
mcp/resources/: resource_map.py
mcp/tests/: test_tools.py
mcp/tools/: docs_tools.py  hub_tools.py  manifest_tools.py  skill_tools.py
scripts/: dev.ps1  dev.sh  generate_catalog.py  update_app_readmes.ps1
snippets/: dashboard-card-python-eval-3000.html
(+219 files in other folders)
