[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "microsistemas-mcp"
version = "1.0.0"
description = "MCP Server para proveer contexto arquitectonico y operativo de la Suite Microsistemas a Asistentes de IA (Solo Lectura)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.3.0",
    "pydantic>=2.0.0"
]

[project.scripts]
microsistemas-mcp = "mcp_server:main"
